# sha256-kernel

./: CMakeLists.txt  README.md
lib/: sha256.cl
src/: common.hpp  error.hpp  main.cpp
